# easy-monitor

./: .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  docker-compose.yml  generate_certs.sh  index.md
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  RETROSPECTIVE.md  ROADMAP.md  STATE.md
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.planning/milestones/: v1.0-MILESTONE-AUDIT.md  v1.0-REQUIREMENTS.md
.planning/phases/01-unified-dashboard-foundation/: 01-01-PLAN.md  01-01-SUMMARY.md  01-02-PLAN.md  01-02-SUMMARY.md  01-03-PLAN.md  01-03-SUMMARY.md  01-CONTEXT.md  01-RESEARCH.md  01-VERIFICATION.md
.planning/phases/02-span-waterfall-visualization/: 02-01-PLAN.md  02-01-SUMMARY.md  02-02-PLAN.md  02-02-SUMMARY.md  02-CONTEXT.md  02-VERIFICATION.md
.planning/phases/03-zero-config-deployment-engineering/: 03-01-PLAN.md  03-01-SUMMARY.md  03-02-PLAN.md  03-02-SUMMARY.md  03-CONTEXT.md  03-VERIFICATION.md
.planning/phases/04-add-authentication-feature/: 04-CONTEXT.md  04-PLAN-01.md  04-PLAN-02.md  04-PLAN-03.md  04-RESEARCH.md
.planning/phases/06-add-apm-feature-same-as-datadog/: 06-01-PLAN.md  06-02-PLAN.md  06-03-PLAN.md  06-RESEARCH.md
.planning/phases/07-enhance-mock-app-with-realistic-multi-step-request-flows-for-span-waterfall-testing/: 07-01-PLAN.md  07-RESEARCH.md
.planning/phases/08-logs-feature-graylog-style-ui-and-metadata/: 08-01-PLAN.md  08-02-PLAN.md
.planning/phases/09-feature-service-map-same-as-datadog/: 09-01-PLAN.md  09-02-PLAN.md
.planning/phases/10-update-apm-page-modern-datadog-style-multi-section-service-monitoring-dashboard/: 10-01-PLAN.md  10-02-PLAN.md
.planning/phases/11-update-dashboard-ui-datadog-style-design-system/: 11-UI-SPEC.md
.planning/phases/11-update-dashboard-ui-datadog-style-design-system-colors-theme-typography-layout-components/: 11-01-PLAN.md  11-02-PLAN.md
.planning/phases/12-fix-logs-query-parser-structured-search-syntax-support/: 12-CONTEXT.md  12-PLAN-01.md
.planning/phases/13-sanitize-sensitive-data-in-trace-span-resource-names/: 13-CONTEXT.md  13-PLAN-01.md
.planning/phases/14-filter-out-internal-service-logs-and-traces-master-service-node-agent/: 14-CONTEXT.md  14-PLAN-01.md
.planning/phases/15-apm-traces-section-replace-recent-traces-with-http-request-list-and-span-detail-view/: 15-PLAN.md
.planning/phases/16-fix-service-map-empty-and-apm-list-missing-services-orderservice-categoryservice-notification-service/: 16-PLAN.md
.planning/phases/17-rebuild-mock-app-as-polyglot-microservices-spring-boot-checkout-go-category-bun-payment-rust-notification-with-full-checkout-flow-and-otlp-tracing/: 17-PLAN.md
.planning/phases/18-feature-create-easymonitor-apm-java-spring-boot-starter-library/: 18-CONTEXT.md  18-PLAN.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
_bmad/_config/: bmad-help.csv  files-manifest.csv  manifest.yaml  skill-manifest.csv
_bmad/bmb/: config.yaml
_bmad/bmm/: config.yaml
_bmad/cis/: config.yaml
_bmad/core/: config.yaml
_bmad/wds/: config.yaml
agents/: README.md
agents/go/: db.go  go.mod  go.sum  gorm.go  telemetry.go
agents/java/: build.gradle
agents/node/: instrumentation.ts  package-lock.json  package.json
agents/rust/easymonitor-agent/: Cargo.toml
agents/rust/easymonitor-agent/src/: actix_middleware.rs  lib.rs  reqwest_middleware.rs
certs/: ca.key  ca.pem  ca.srl  client.key  client.pem  server.key  server.pem
dashboard/: index.html  package-lock.json  package.json  tailwind.config.js
dashboard/src/: App.tsx  index.css
docs/: Dashboard_Architecture.md  High_Level_Architecture.md  Master_Service_Architecture.md  Node_Agent_Architecture.md  plan.md
easymonitor-apm-java/: build.gradle  settings.gradle
easymonitor-javaagent/: settings.gradle
master-service/: Cargo.toml
master-service/src/: main.rs  utils.rs
master-service/src/api/: apm.rs  auth.rs  db_monitoring.rs  mod.rs  queries.rs
master-service/src/bus/: mod.rs
master-service/src/ingress/: mod.rs
master-service/src/processors/: alerts.rs  mod.rs  notifications.rs  trace_metrics.rs
master-service/src/read_path/: mod.rs
master-service/src/storage/: clickhouse.rs  mod.rs  users.rs
master-service/src/write_path/: batch_writer.rs  mod.rs
mock-app/: .gitignore  category.js  custom-exporter.js  index.js  instrumentation.js  order.js  package-lock.json  package.json  payment.js  start.sh  tracing.js  udp_logger.js
mock-app/cart-service/: build.gradle  gradlew
mock-app/category-service/: go.mod  go.sum  main.go
mock-app/checkout-service/: build.gradle  pom.xml
mock-app/document/: seed.sql
mock-app/inventory-service/: Cargo.toml
mock-app/inventory-service/src/: controller.rs  domain.rs  main.rs  repository.rs  service.rs
mock-app/notification-service/: Cargo.toml  build.gradle
mock-app/notification-service/src/: controller.rs  domain.rs  main.rs  repository.rs  service.rs
mock-app/notification-service/src/main/java/com/easymonitor/notification/: NotificationServiceApplication.java
mock-app/notification-service/src/main/resources/: application.properties
mock-app/notification-service/src/test/java/com/easymonitor/notification/: NotificationServiceApplicationTests.java
mock-app/order-service/: build.gradle
mock-app/payment-service/: package-lock.json  package.json
mock-app/pricing-service/: build.gradle  gradlew
mock-app/product-service/: go.mod  go.sum  main.go
mock-app/shipping-service/: package-lock.json  package.json  tsconfig.json
mock-app/user-service/: go.mod  go.sum  main.go
node-agent/: Cargo.toml  Dockerfile
node-agent/src/: bin_tools.rs  main.rs
node-agent/src/apm/: http_receiver.rs  mod.rs
node-agent/src/collector/: mod.rs
node-agent/src/dogstatsd/: mod.rs
node-agent/src/forwarder/: mod.rs
node-agent/src/logs/: mod.rs  tailer.rs
node-agent/src/wal/: mod.rs
shared-proto/: Cargo.toml  build.rs
shared-proto/proto/: logs.proto  metrics.proto  traces.proto
shared-proto/src/: lib.rs
(+217 files in other folders)
