[package]
name = "master-service"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
shared-proto = { path = "../shared-proto" }

tokio.workspace = true
tokio-stream.workspace = true
tonic.workspace = true
prost.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
chrono.workspace = true
dashmap.workspace = true
axum.workspace = true
tower-http.workspace = true
serde_json.workspace = true
serde.workspace = true
jsonwebtoken.workspace = true
reqwest.workspace = true
urlencoding = "2.1.3"
