[package]
name = "node-agent"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
shared-proto = { path = "../shared-proto" }

tokio.workspace = true
tokio-stream.workspace = true
tonic.workspace = true
prost.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
sled.workspace = true
sysinfo.workspace = true
notify.workspace = true
rmp-serde.workspace = true
serde.workspace = true
uuid = { version = "1.20.0", features = ["v4"] }
serde_json.workspace = true
