[package]
name = "notification-service"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rand = "0.8"
opentelemetry = "0.22"
easymonitor-agent = { path = "../../agents/rust/easymonitor-agent" }
uuid = { version = "1", features = ["v4"] }
tracing = "0.1.44"
tracing-actix-web = "0.7.21"
tracing-opentelemetry = "0.23.0"
tracing-subscriber = "0.3.23"
