[package]
name = "easymonitor-agent"
version = "0.1.0"
edition = "2021"

[dependencies]
opentelemetry = "0.22"
opentelemetry_sdk = { version = "0.22", features = ["rt-tokio", "logs"] }
opentelemetry-otlp = { version = "0.15", features = ["tonic", "logs"] }
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
tracing-opentelemetry = "0.23.0"
opentelemetry-appender-tracing = "0.3.0"
tracing.workspace = true
actix-web = "4.13.0"
futures-util = "0.3.32"
