[package]
name = "easymonitor-agent"
version = "0.1.0"
edition = "2021"

[dependencies]
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
tracing = "0.1"
actix-web = "4.13.0"
futures-util = "0.3.32"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", features = ["json"] }
rmp-serde = "1.3"
rand = "0.8"
tokio.workspace = true
regex = "1.12.3"
